# base

./: .gitignore  CMakeLists.txt  pokus.cpp
cmake/: coverage.cmake
include/: CMakeLists.txt
include/base/: base.hpp  bit-buffer.hpp  chunk-of-bits.hpp  concepts.hpp  encodings.hpp  utilities.hpp
tests/: CMakeLists.txt  base.cpp  base64.cpp  basic.cpp  bit-buffer.cpp  bit_buffer.cpp  chunk-of-bits.cpp  chunk.cpp  utilities.cpp
